--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,25 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<link rel="icon" type="image/svg+xml" href="/assets/images/vite.svg" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="css/base/normalize.css" />
-		<link rel="stylesheet" href="css/base/base.css" />
-		<link rel="stylesheet" href="css/styles.css" />
-		<title>Vite App</title>
-	</head>
-	<body>
-		<h1>WEB WITH VITE</h1>
-		<!-- <img src="./assets/images/cute-cat.webp" alt="" /> -->
-		<script type="module" src="./js/index.js"></script>
-	</body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>wordle</title> <link rel="stylesheet" href="./css/styles.css">
+</head>
+<body>
+
+  <h1>Wordle</h1>
+  <div id="game-table"></div>
+
+  <form id="form">
+    <input type="text" name="word" class="input" placeholder="type your solution">
+  </form>
+
+  <div class="class-button" id="win-message" style="display: none;">
+    <p>You WIN!</p>
+    <button id="try-again-btn">Try Again</button>
+  </div>
+  
+
+  <script src="./js/scripts.js"></script>
+</body>
 </html>
