--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
   </div>
   
 
-  <script src="./js/index.js"></script>
+  <script type="module" src="./js/index.js"></script>
+
 </body>
 </html>
